syntax = "proto3";

package saacs.auth.v0;

import "buf/validate/validate.proto";
import "google/protobuf/descriptor.proto";
// ─────────────────────────────────────────────────────────────────────────────────
import "saacs/auth/v0/policy.proto";
import "saacs/auth/v0/type.proto";
// ─────────────────────────────────────────────────────────────────────────────────
import "saacs/common/v0/options.proto";

// Identity Auth Object
message UserDirectMembership {
  option (auth_type) = AUTH_TYPE_IDENTITY;
  option (saacs.common.v0.key_schema).item_kind = ITEM_KIND_PRIMARY_ITEM;
  option (saacs.common.v0.key_schema).properties = {
    paths: [
      "msp_id",
      "user_id"
    ]
  };

  // The collection that the user is a member of
  string collection_id = 1 [(buf.validate.field).string.min_len = 1];
  // The msp of the organization that the user's certificate is from
  string msp_id = 2 [(buf.validate.field).string.min_len = 1];
  // The id of the user from the certificate
  string user_id = 3 [(buf.validate.field).string.min_len = 1];
  // The Permissions that the user will have
  Polices polices = 4 [(buf.validate.field).required = true];

  string note = 6;
}
